--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,8 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+    <dependencies>
+        
+    </dependencies>
     
 </project>
