--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,11 @@
     <packaging>jar</packaging>
 
     <dependencies>
-        
+         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.1.8.RELEASE</version>
+        </dependency>
     </dependencies>
     
 </project>
