--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,11 @@
     <packaging>jar</packaging>
 
     <dependencies>
-        
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
     
 </project>
